logs/2021-07-22_11-32-36.txt
npm WARN discord_bot@1.0.0 No repository field.

audited 445 packages in 3.07s

39 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities

[DisTube] Downloaded youtube-dl 2021.06.06
this bot is online soup#9637! ID:- 727077691605647381
1)  server name :- Fantastical | server id :- 407860192005324811
2)  server name :- Gamers Club | server id :- 512128395094786059
3)  server name :- give me some sunshine, give me some rain | server id :- 567789813307015200
4)  server name :- DeterLatteBhaluPie | server id :- 700561561617694762
5)  server name :- Deebot's Hub | server id :- 710413124083253270
6)  server name :- Bot Test | server id :- 727081997490454550
7)  server name :- BHALU GANG BANG | server id :- 736123992724865084
8)  server name :- Random Shit | server id :- 754626495783239730
9)  server name :- Hitler's Lost SinS | server id :- 758322641744166933
10)  server name :- Respectfully's server | server id :- 854999893143322624
11)  server name :- Respectfully's server2 | server id :- 858277238344253441
total of 11 servers
server:-  Respectfully's server ; Respectfully :- *help
Error: Cannot find module '../../commands/[object Object]'
Require stack:
- /home/minecraft/multicraft/servers/server200444/commands/help.js
- /home/minecraft/multicraft/servers/server200444/index.js
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:957:15)
    at Function.Module._load (internal/modules/cjs/loader.js:840:27)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at /home/minecraft/multicraft/servers/server200444/commands/help.js:20:28
    at /home/minecraft/multicraft/servers/server200444/node_modules/@discordjs/collection/dist/index.js:220:20
    at Function.from (<anonymous>)
    at Map.map (/home/minecraft/multicraft/servers/server200444/node_modules/@discordjs/collection/dist/index.js:218:22)
    at Object.execute (/home/minecraft/multicraft/servers/server200444/commands/help.js:19:35)
    at Client.<anonymous> (/home/minecraft/multicraft/servers/server200444/index.js:221:14)
    at Client.emit (events.js:310:20)
    at MessageCreateAction.handle (/home/minecraft/multicraft/servers/server200444/node_modules/discord.js/src/client/actions/MessageCreate.js:31:14)
    at Object.module.exports [as MESSAGE_CREATE] (/home/minecraft/multicraft/servers/server200444/node_modules/discord.js/src/client/websocket/handlers/MESSAGE_CREATE.js:4:32)
    at WebSocketManager.handlePacket (/home/minecraft/multicraft/servers/server200444/node_modules/discord.js/src/client/websocket/WebSocketManager.js:384:31)
    at WebSocketShard.onPacket (/home/minecraft/multicraft/servers/server200444/node_modules/discord.js/src/client/websocket/WebSocketShard.js:444:22)
    at WebSocketShard.onMessage (/home/minecraft/multicraft/servers/server200444/node_modules/discord.js/src/client/websocket/WebSocketShard.js:301:10) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [
    '/home/minecraft/multicraft/servers/server200444/commands/help.js',
    '/home/minecraft/multicraft/servers/server200444/index.js'
  ]
}
server:-  Respectfully's server ; soup :- <@322735784593588225>, there was an error trying to execute that command!
server:-  Respectfully's server ; Respectfully :- *reload help
/home/minecraft/multicraft/servers/server200444/commands/help.js:20
                let file = require(`../../commands/${file}`);
                    ^

SyntaxError: Identifier 'file' has already been declared
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.execute (/home/minecraft/multicraft/servers/server200444/commands/reload.js:17:32)
    at Client.<anonymous> (/home/minecraft/multicraft/servers/server200444/index.js:221:14)
    at Client.emit (events.js:310:20)
    at MessageCreateAction.handle (/home/minecraft/multicraft/servers/server200444/node_modules/discord.js/src/client/actions/MessageCreate.js:31:14)
    at Object.module.exports [as MESSAGE_CREATE] (/home/minecraft/multicraft/servers/server200444/node_modules/discord.js/src/client/websocket/handlers/MESSAGE_CREATE.js:4:32)
    at WebSocketManager.handlePacket (/home/minecraft/multicraft/servers/server200444/node_modules/discord.js/src/client/websocket/WebSocketManager.js:384:31)
    at WebSocketShard.onPacket (/home/minecraft/multicraft/servers/server200444/node_modules/discord.js/src/client/websocket/WebSocketShard.js:444:22)
    at WebSocketShard.onMessage (/home/minecraft/multicraft/servers/server200444/node_modules/discord.js/src/client/websocket/WebSocketShard.js:301:10)
    at WebSocket.onMessage (/home/minecraft/multicraft/servers/server200444/node_modules/ws/lib/event-target.js:132:16)
server:-  Respectfully's server ; soup :- There was an error while reloading a command `help`:
`Identifier 'file' has already been declared`
server:-  Respectfully's server ; soup :- Command `help` was reloaded!
